--- a/Project003-TowerDefense/TODO.txt
+++ b/Project003-TowerDefense/TODO.txt
@@ -9,17 +9,27 @@
 /____/ /_/  /_/  |_|/_/ |_| /_/  /___//_/ |_/ \____/   /____/ \____/ \____//_/ |_/
 
 
+Off-stream changes
+---------------------
+Added extension method to shuffle a List
+Refactored SpawnMonsters method
+Added MonsterData struct
+Refactored CreateMonster method
+Refactored processing rewards method
 
 
 Cool TODO list
 ---------------------
-Tower upgrading
+Flying monsters
+Tower selection
 Tower stats
+Tower upgrading
+Anti-air tower
+Random reward generator
 Removing towers
 Damage type
 Spell scrolls (one-time use consumables)
 Monster resistances
-Flying monsters
 Land mines
 Sound FXs
 Music
@@ -27,12 +37,12 @@ Music
 
 Boring TODO list
 ---------------------
+Add reward options labels (UX)
+While placing a tower reward show which one it is (UX)
+Smooth monster movement (game logic)
 Pathfinding recalculation (performance)
 Refactor tap map logic (clean code / performance)
 Refactor CreateTile method (clean code)
-Refactor CreateMonster method (clean code)
-While placing a tower reward show which one it is (UX)
-Add reward options labels (UX)
 Gamearea dimensions constants (clean code)
 Convert individual textures into texture-atlas (performance)
 
