--- a/Project003-TowerDefense/TODO.txt
+++ b/Project003-TowerDefense/TODO.txt
@@ -25,7 +25,7 @@ Rewards
 Cool TODO list - mechanics, features
 ---------------------
 Game events
-Bosses
+Boss wave
 Elements interactions
 Tower selection
 Tower stats
